# gvsu-snow-removal-scheduler

./: .editorconfig  .envrc  .gitignore  Justfile  LICENSE  README.md  config.json  devenv.nix  devenv.yaml  pyproject.toml
.github/workflows/: ci.yml
src/gvsu_snow_removal_scheduler/: __init__.py  main.py
tests/: test_main.py
