[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gvsu-snow-removal-scheduler"
version = "1.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "gspread>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
